--- a/src/components/pages/ShipmentCustomer.css
+++ b/src/components/pages/ShipmentCustomer.css
@@ -2,6 +2,7 @@
   margin-left: 112px;
   margin-top: 79px;
 }
+
 .shipment-content .userProfile {
   display: flex;
   flex-direction: row;
@@ -19,6 +20,7 @@
   height: 60px;
   margin-left: 26px;
 }
+
 .shipment-content .userProfile .usersDetails h6 {
   font-weight: 700;
   font-size: 18px;
@@ -35,6 +37,7 @@
   margin-left: 22px;
   margin-top: -5px;
 }
+
 .shipment-content .edit-btn button {
   position: relative;
   left: 190px;
@@ -47,6 +50,7 @@
   background: #3ab44a;
   border-radius: 6px;
 }
+
 .shipment .types-of-shipment {
   display: flex;
   align-items: center;
@@ -54,6 +58,7 @@
   margin-top: 42px;
   margin-left: 112px;
 }
+
 .types-of-shipment .add-shipment button {
   font-weight: 500;
   font-size: 18px;
@@ -65,7 +70,9 @@
   width: 210px;
   height: 56px;
 }
-.types-of-shipment select {
+
+.types-of-shipment select,
+.shipment-date input {
   padding: 12px 24px;
   background: #f3f4f6;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
@@ -77,9 +84,11 @@
   color: #374151;
   height: 56px;
 }
+
 .types-of-shipment .seach-input {
   margin-left: 120px;
 }
+
 .types-of-shipment .seach-input input {
   width: 250px;
   height: 56px;
@@ -89,6 +98,7 @@
   border-radius: 6px;
   outline: none;
 }
+
 .types-of-shipment .seach-input input::placeholder {
   text-align: center;
   font-weight: 400;
@@ -96,6 +106,7 @@
   line-height: 20px;
   color: #9ca3af;
 }
+
 .types-of-shipment .seach-input span {
   margin-right: -20px;
   position: absolute;
